--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,7 +15,6 @@
                     <li><a href="#" class="active">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li><a href="#">team</a></li>
                 </ul>
             </nav>
             <!--text-->
@@ -23,7 +22,7 @@
                 <p>Hello,</p>
                 <p>I am Sreyajith</p>
                 <P>T am a BTec Engineering Student</P>
-                <button class="down-cv">Download CV</button>
+                <a href="../resume.docx"> <button class="down-cv">Download CV</button></a>
             </div>
             <!--Profile-->
             <img src="images/profile.jpg" class="profile" alt="profile picture">
