--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
                 <p>Hello,</p>
                 <p>I am Sreyajith</p>
                 <P>T am a BTec Engineering Student</P>
-                <a href="../resume.docx"> <button class="down-cv">Download CV</button></a>
+                <a href="../portfolio/cv.pdf"> <button class="down-cv">Download CV</button></a>
             </div>
             <!--Profile-->
             <img src="images/profile.jpg" class="profile" alt="profile picture">
