--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -22,7 +22,7 @@
                 <p>Hello,</p>
                 <p>I am Sreyajith</p>
                 <P>T am a BTec Engineering Student</P>
-                <a href="../portfolio/cv.pdf"> <button class="down-cv">Download CV</button></a>
+                <a href="cv.pdf"> <button class="down-cv">Download CV</button></a>
             </div>
             <!--Profile-->
             <img src="images/profile.jpg" class="profile" alt="profile picture">
@@ -39,7 +39,7 @@
                 After that I completed higher secondary education from Rani jai higher secondary 
                 school in computer science stream.
             </P>
-            <button>Download Cv</button>
+                <a href="cv.pdf"> <button>Download Cv</button></a>
         </div>
     </div>
         <div class="project">
