--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p>Hello,</p>
                 <p>I am Sreyajith</p>
                 <P>T am a BTec Engineering Student</P>
-                <a href="CV.PDF"><button class="down-cv">Download CV</button></a>
+                <a href="CV.PNG.PDF"><button class="down-cv">Download CV</button></a>
             </div>
             <!--Profile-->
             <img src="images/profile.jpg" class="profile" alt="profile picture">
@@ -39,7 +39,7 @@
                 After that I completed higher secondary education from Rani jai higher secondary 
                 school in computer science stream.
             </P>
-            <a href="CV.PDF"> <button>Download Cv</button></a>
+            <a href="CV.PNG.PDF"> <button>Download Cv</button></a>
         </div>
     </div>
         <div class="project">
@@ -83,11 +83,11 @@
             <!--social media-->
             <div class="social-icons">
                 <a href="https://www.instagram.com/sreyajith_/">
-                    <img src="../portfolio/images/insta.jpg" alt="instagram" style="width:42px;height:42px;">
+                    <img src="images/insta.jpg" alt="instagram" style="width:42px;height:42px;">
                 </a>
                 <a href="https://www.linkedin.com/in/sreyajith-45870321a/">
-                    <img src="../portfolio/images/link.png" alt="linkedin" style="width:42px;height:42px";> </a>
-                <a href="https://github.com/sreyajith"><img src="../portfolio/images/git.png" alt="github" style="width:42px;height:42px;"></a>
+                    <img src="images/link.png" alt="linkedin" style="width:42px;height:42px";> </a>
+                <a href="https://github.com/sreyajith"><img src="images/git.png" alt="github" style="width:42px;height:42px;"></a>
                 
             </div>
             <!--copyright-->
