--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="text-container">
                 <p>Hello,</p>
                 <p>I am Sreyajith</p>
-                <P>T am a BTec Engineering Student</P>
-                <a href="CV.PNG.PDF"><button class="down-cv">Download CV</button></a>
+                <P>I am a btech Engineering Student</P>
+                <a href="CV.PNG.pdf" download=""><input type="button"  class="down-cv">Download CV</a>
             </div>
             <!--Profile-->
             <img src="images/profile.jpg" class="profile" alt="profile picture">
@@ -31,7 +31,7 @@
             <img src="images/me.png">
             <div class="about-text">
             <p>About Me</p>
-            <p>BTec Engineering Student</p>
+            <p>BTech Engineering Student</p>
             <P>Determined and hardworking student. Highly skillful in programming and robotics.</P>
             <P>My name is Sreyajith and i am from Kerala. 
                 I am purusing my Btec engineering from VIT AP.I completed my 
@@ -39,12 +39,11 @@
                 After that I completed higher secondary education from Rani jai higher secondary 
                 school in computer science stream.
             </P>
-            <a href="CV.PNG.PDF"> <button>Download Cv</button></a>
         </div>
     </div>
         <div class="project">
             <div class="project-text">
-            <p>project</p>
+            <p>Skills</p>
             <p>During undergraduation</p>
             <p>hugkwudgeuhdclkxskbwejkvfcj,msjdlqwjihdkxJCGBBKJKSA msjdlqwjihdkxJCGBBKJKSA</p>
         </div>
