--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <!--social media-->
             <div class="social-icons">
                 <a href="https://www.instagram.com/sreyajith_/">
-                    <img src="../portfolio/images/insta.jpg" alt="instagram" style="width:42px;height:42px;">
+                    <img src=""https://github.com/CSI-VIT-AP/Sreyajith-21bce7611.github.io-/blob/main/images/insta.jpg alt="instagram" style="width:42px;height:42px;">
                 </a>
                 <a href="https://www.linkedin.com/in/sreyajith-45870321a/">
                     <img src="../portfolio/images/link.png" alt="linkedin" style="width:42px;height:42px";> </a>
