--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
             <!--social media-->
             <div class="social-icons">
                 <a href="https://www.instagram.com/sreyajith_/">
-                    <img src=""https://github.com/CSI-VIT-AP/Sreyajith-21bce7611.github.io-/blob/main/images/insta.jpg alt="instagram" style="width:42px;height:42px;">
+                    <img src=""../images/insta.jpg alt="instagram" style="width:42px;height:42px;">
                 </a>
                 <a href="https://www.linkedin.com/in/sreyajith-45870321a/">
-                    <img src="../portfolio/images/link.png" alt="linkedin" style="width:42px;height:42px";> </a>
-                <a href="https://github.com/sreyajith"><img src="../portfolio/images/git.png" alt="github" style="width:42px;height:42px;"></a>
+                    <img src="../images/link.png" alt="linkedin" style="width:42px;height:42px";> </a>
+                <a href="https://github.com/sreyajith"><img src="../images/git.png" alt="github" style="width:42px;height:42px;"></a>
                 
             </div>
             <!--copyright-->
