--- a/index.html
+++ b/index.html
@@ -98,13 +98,11 @@
             <P> Designed by Sreyajith and Managed by CSI Chapter VIT</P>
             <!--social media-->
             <div class="social-icons">
-                <a href="https://www.instagram.com/sreyajith_/">
-                    <img src=""../images/insta.jpg alt="instagram" style="width:42px;height:42px;">
-                </a>
-                <a href="https://www.linkedin.com/in/sreyajith-45870321a/">
-                    <img src="../images/link.png" alt="linkedin" style="width:42px;height:42px";> </a>
-                <a href="https://github.com/sreyajith"><img src="../images/git.png" alt="github" style="width:42px;height:42px;"></a>
-                
+                     <ul>
+                <li><a href="https://www.instagram.com/sreyajith_/"><li class="fa fa-instagram"></li></a></li>
+              <li><a href="https://www.linkedin.com/in/sreyajith-45870321a/"><li class="fa fa-linkedin"></li></a></li>
+             <li><a href="https://github.com/sreyajith"><li class="fa fa-github"></li></a></li>
+                </ul>
             </div>
             <!--copyright-->
             <P class="copyright";>© Copyright Sreyajith 2021</P>
